[package]
name = "handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.23.0", features = ["full"] }
strum_macros = "0.24.1"
strum = { version = "0.24.1", features = ["derive"] }
aead = "0.5.1"
x25519-dalek = "1.2.0"
x448 = "0.6.0"
rand_core = { version = "0.6.4", default-features = false }
sha2 = "0.10.6"
chacha20poly1305 = { version = "0"}
blake2 = "0.10.6"
aes-gcm = "0.10.1"