[package]
name = "handshake"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.10" }
hex = "0.4.3"
tokio = { version = "1.49", features = ["full"] }
strum_macros = "0.27"
strum = { version = "0.27", features = ["derive"] }
aead = "0.5.2"
x25519-dalek = "2.0"
x448 = "0.6"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10" }
blake2 = "0.10"
aes-gcm = "0.10"
